bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: ';' expected but ')' found.
  return((Math.abs(100-n)) < 11 )||(Math.abs(200-n))<11))}
                                                       ^